# aboutus-network-monitor

./: .env.example  .gitignore  README.md  aboutus-monitor  pyproject.toml  requirements.txt
app/: __init__.py  checks.py  config.py  discovery.py  main.py  snmp.py  status_service.py  storage.py
app/static/: app.js  index.html  styles.css
config/: network.yaml
